# Project-Aether

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  demo_us1.sh  demo_us2.sh  package-lock.json  pyproject.toml
.agentready/: assessment-20260207-012836.json  assessment-latest.json  report-20260207-012836.html  report-20260207-012836.md  report-latest.html  report-latest.md
.cursor/plans/: 01_domain_message_types.plan.md  02_otel_observability.plan.md  03_selective_remote_agents.plan.md  04_ha_client_lifecycle.plan.md  05_per_agent_model_config.plan.md  06_proposal_entity_validation.plan.md  distributed_ux_and_features_54d78aa4.plan.md
.cursor/rules/: boy-scout-rule.mdc  commit-checkpoint.mdc  constitution-directives.mdc  conventional-commit.mdc  feature-branch-workflow.mdc  feature-delivery.mdc  quality-contract.mdc  specify-rules.mdc  test-isolation.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-label.yaml  ci.yaml  pr-checks.yaml
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 001_initial_agent.py  002_ha_registry.py  003_conversations_us2.py  004_insights.py  005_fix_insights_schema.py  006_composite_indexes.py  007_insight_types_behavioral.py  008_insight_schedules.py  009_proposal_types.py  010_passkey_credentials.py  011_llm_usage.py  012_system_config.py  013_agent_configuration.py  014_insight_types_extended.py  015_llm_usage_fk_index.py  016_user_profiles.py  017_model_ratings.py  018_agent_version_semver.py  019_flow_grades.py  020_ha_zones.py  021_insight_conversation_fields.py  022_zone_url_preference.py  023_analysis_reports.py  024_schedule_depth_strategy.py  025_dashboard_proposals.py  026_agent_routing_fields.py  026_app_settings.py  027_previous_dashboard_config.py  028_workflow_definitions.py  029_agent_routing_fields.py  030_workflow_definitions.py  031_previous_config_column.py  031_tool_groups.py  032_agent_config_tool_groups.py  033_optimization_tables.py  034_app_settings_notifications.py  035_insightstatus_enum_values.py  036_insightimpact_critical.py  037_proposal_lifecycle_states.py  038_fix_proposalstatus_enum_case.py  (+5 more)
docs/: api-reference.md  architecture-review.md  architecture.md  cli-reference.md  code-healthcheck.md  configuration.md  development.md  distributed-mode.md  getting-started.md  user-flows.md
infrastructure/gvisor/: config.toml
infrastructure/podman/: Containerfile  Containerfile.base  Containerfile.sandbox  Containerfile.service  Containerfile.ui  compose.distributed.yaml  compose.observability.yaml  compose.yaml  nginx.conf
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
infrastructure/promtail/: promtail.yml
infrastructure/test/: docker-compose.test.yaml
scripts/: generate_openapi.py  mlflow_local.sh
specs/001-project-aether/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  exceptions.py  llm.py  llm_call_context.py  llm_pricing.py  logging_config.py  settings.py
src/agents/: __init__.py  a2a_client.py  a2a_service.py  a2a_streaming.py  analyst_config_mixin.py  analyst_discussion_mixin.py  analyst_persistence_mixin.py  architect.py  base.py  base_analyst.py  behavioral_analyst.py  config_cache.py  dashboard_designer.py  data_scientist.py  developer.py  diagnostic_analyst.py  dual_mode.py  energy_analyst.py  execution_context.py  knowledge.py  librarian.py  model_context.py  orchestrator.py  registry.py  routing.py  synthesis.py
src/api/: __init__.py  auth.py  deps.py  ha_verify.py  main.py  metrics.py  middleware.py  rate_limit.py  utils.py
src/cli/: __init__.py  main.py  utils.py
src/dal/: __init__.py  agents.py  analysis_reports.py  app_settings.py  areas.py  automations.py  base.py  conversations.py  devices.py  entities.py  flow_grades.py  ha_zones.py  insight_schedules.py  insights.py  llm_usage.py  optimization.py  queries.py  services.py  sync.py  system_config.py  tool_groups.py
src/diagnostics/: __init__.py  config_validator.py  entity_health.py  error_patterns.py  integration_health.py  log_parser.py
src/graph/: __init__.py  nodes.py  state.py  workflows.py
src/ha/: __init__.py  automation_deploy.py  automations.py  base.py  behavioral.py  client.py  constants.py  dashboards.py  diagnostics.py  entities.py  event_handler.py  event_stream.py  gaps.py  helpers.py  history.py  logbook.py  parsers.py  websocket.py  workarounds.py
src/hitl/: __init__.py  action_log.py  insight_notifier.py  push_notification.py
src/jobs/: __init__.py  events.py
src/llm/: __init__.py  circuit_breaker.py  factory.py  model_tiers.py  resilient.py  usage.py
src/mcp/: __init__.py  automation_deploy.py  automations.py  base.py  behavioral.py  client.py  constants.py  diagnostics.py  entities.py  gaps.py  history.py  logbook.py  parsers.py  workarounds.py
src/sandbox/: __init__.py  artifact_validator.py  policies.py  runner.py
src/scheduler/: __init__.py  service.py
src/schema/: __init__.py  core.py  semantic.py
src/services/: __init__.py  architect.py  dashboard_designer.py  developer.py  ds_analysts.py  ds_orchestrator.py  librarian.py  orchestrator.py
src/storage/: __init__.py  artifact_store.py  checkpoints.py  models.py
src/tools/: __init__.py  agent_tools.py  analysis_tools.py  approval_tools.py  automation_builder_tools.py  dashboard_tools.py  diagnostic_tools.py  ds_team_runners.py  ds_team_strategies.py  ds_team_tool.py  ha_automation_tools.py  ha_entity_tools.py  ha_input_tools.py  ha_script_scene_tools.py  ha_tools.py  ha_utility_tools.py  insight_schedule_tools.py  mutation_registry.py  registry.py  report_lifecycle.py  review_tools.py  specialist_consult_tools.py  specialist_routing.py  specialist_tools.py  tariff_tools.py  web_search.py
src/tracing/: __init__.py  (+9 more)
tests/: conftest.py  factories.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+819 files in other folders)
