[project]
name = "aether"
version = "0.1.0"
description = "Agentic home automation system for Home Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Project Aether Team" }
]
keywords = ["home-assistant", "automation", "agents", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LangGraph for agent orchestration (Constitution: State)
    "langgraph>=0.2.0,<2.0.0",
    "langchain-core>=0.3.0,<2.0.0",
    "langchain-openai>=0.2.0,<2.0.0",
    # OpenAI for LLM (Research Decision #6)
    "openai>=1.50.0,<3.0.0",
    # FastAPI for HTTP API (Research Decision #8)
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "websockets>=13.0,<15.0",
    # Database (Research Decision #5: PostgreSQL)
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    # MLflow for observability (Constitution: Observability)
    "mlflow>=2.18.0,<3.0.0",
    # Pydantic for validation
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    # CLI
    "typer>=0.14.0,<1.0.0",
    "rich>=13.9.0,<15.0.0",
    # Scheduling (Feature 10: Scheduled & Event-Driven Insights)
    "apscheduler>=3.10.0,<4.0.0",
    # Utilities
    "httpx>=0.28.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.4.0,<26.0.0",
    "langchain-google-genai>=4.2.0,<5.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "pyjwt>=2.0.0,<3.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "webauthn>=2.7.0,<3.0.0",
    "cryptography>=46.0.4,<48.0.0",
    "google-auth>=2.28.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing (Constitution: Reliability & Quality)
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",  # Parallel test execution
    "pytest-timeout>=2.3.0,<3.0.0",  # Per-test timeout to prevent hangs
    "factory-boy>=3.3.0",
    "testcontainers>=4.8.0",  # PostgreSQL integration tests
    "httpx>=0.28.0",  # FastAPI TestClient
    
    # Linting & Formatting (Constitution: Quality Gates)
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    
    # Security scanning (used by CI)
    "bandit>=1.7.0,<2.0.0",
    
    # Type stubs
    "types-python-dateutil>=2.9.0",
    "sqlalchemy[mypy]>=2.0.0",
]

[project.scripts]
aether = "src.cli.main:app"

[project.urls]
Homepage = "https://github.com/dsaridak/home_agent"
Documentation = "https://github.com/dsaridak/home_agent#readme"
Repository = "https://github.com/dsaridak/home_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# RUFF CONFIGURATION (Constitution: Quality Gates)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments (agents often need many params)
    "PLR2004",  # Magic value comparison (acceptable in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # Unused arguments OK in tests (fixtures)
    "PLR2004", # Magic values OK in tests
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# MYPY CONFIGURATION (Constitution: Quality Gates)
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "testcontainers.*",
    "factory.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST CONFIGURATION (Constitution: Reliability & Quality)
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                      # Show extra test summary
    "-q",                       # Quiet mode
    "--strict-markers",         # Strict marker enforcement
    "--strict-config",          # Strict config enforcement
    "--durations=20",           # Show 20 slowest tests for optimization
]
asyncio_mode = "auto"
# Global per-test timeout: prevents any single test from hanging the suite.
# Unit tests should complete in well under 10s; integration tests can override
# via @pytest.mark.timeout(60).  See Constitution Principle V.
timeout = 10
timeout_method = "thread"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests (skip with -m 'not slow')",
    "requires_postgres: Tests requiring PostgreSQL container",
]

# =============================================================================
# COVERAGE CONFIGURATION (Constitution: 80% min, 95% critical paths)
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "src/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
