[project]
name = "aether"
version = "0.1.0"
description = "Agentic home automation system for Home Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Project Aether Team" }
]
keywords = ["home-assistant", "automation", "agents", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LangGraph for agent orchestration (Constitution: State)
    "langgraph>=0.2.0,<2.0.0",
    "langchain-core>=0.3.0,<2.0.0",
    "langchain-openai>=0.2.0,<2.0.0",
    # OpenAI for LLM (Research Decision #6)
    "openai>=1.50.0,<3.0.0",
    # FastAPI for HTTP API (Research Decision #8)
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "websockets>=13.0,<15.0",
    # Database (Research Decision #5: PostgreSQL)
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    # MLflow for observability (Constitution: Observability)
    "mlflow>=3.5.0,<4.0.0",
    # Pydantic for validation
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    # CLI
    "typer>=0.14.0,<1.0.0",
    "rich>=13.9.0,<15.0.0",
    # Scheduling (Feature 10: Scheduled & Event-Driven Insights)
    "apscheduler>=3.10.0,<4.0.0",
    # Utilities
    "httpx>=0.28.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.4.0,<26.0.0",
    "langchain-google-genai>=4.2.0,<5.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "pyjwt>=2.0.0,<3.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "webauthn>=2.7.0,<3.0.0",
    "cryptography>=46.0.4,<48.0.0",
    "google-auth>=2.28.0,<3.0.0",
    # YAML schema validation (Feature 26: YAML Schema Compiler/Validator)
    "jsonschema>=4.20.0,<5.0.0",
]

[project.scripts]
aether = "src.cli.main:app"

[project.urls]
Homepage = "https://github.com/dsaridak/home_agent"
Documentation = "https://github.com/dsaridak/home_agent#readme"
Repository = "https://github.com/dsaridak/home_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# RUFF CONFIGURATION (Constitution: Quality Gates)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    # Import patterns (lazy imports for circular import avoidance and test isolation)
    "PLC0415",  # import-outside-top-level
    "E402",     # module-import-not-at-top-of-file

    # FastAPI / framework patterns
    "B008",     # function-call-in-default-argument (FastAPI Depends() pattern)
    "ARG001",   # unused-function-argument (required by framework signatures, callbacks)
    "ARG002",   # unused-method-argument (same)

    # Complexity (legitimate in agent orchestration; track and reduce over time)
    "PLR0912",  # too-many-branches
    "PLR0911",  # too-many-return-statements
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PLR2004",  # magic-value-comparison

    # Line length (ruff format handles code; remaining E501 are URLs, strings, comments)
    "E501",     # line-too-long (enforced by ruff format, not linter)

    # Acceptable patterns
    "PLW0603",  # global-statement (singleton patterns)
    "PLW0602",  # global-variable-not-assigned
    "ERA001",   # commented-out-code (tracked as tech debt, not a lint blocker)
    "SIM117",   # multiple-with-statements (often more readable as-is)
    "RUF012",   # mutable-class-default (Pydantic/SQLAlchemy models use this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # Unused arguments OK in tests (fixtures)
    "PLR2004", # Magic values OK in tests
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# MYPY CONFIGURATION (Constitution: Quality Gates)
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # third-party decorators lack py.typed; re-enable when upstream adds stubs
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

# Per-module overrides — third-party libs without py.typed / stubs
[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "testcontainers.*",
    "factory.*",
    "apscheduler.*",
]
ignore_missing_imports = true

# Modules with pre-existing type errors — strict checks relaxed until cleanup.
# New modules MUST pass strict mypy. Burn this list down module-by-module.
# Tracked: 356 errors across 71 modules as of 2026-02-09.
[[tool.mypy.overrides]]
module = [
    # Agents layer
    "src.agents.architect",
    "src.agents.behavioral_analyst",
    "src.agents.dashboard_designer",
    "src.agents.data_scientist",
    "src.agents.developer",
    "src.agents.diagnostic_analyst",
    "src.agents.energy_analyst",
    # API layer
    "src.api.auth",
    "src.api.ha_verify",
    "src.api.main",
    "src.api.middleware",
    "src.api.routes.activity_stream",
    "src.api.routes.auth",
    "src.api.routes.chat",
    "src.api.routes.flow_grades",
    "src.api.routes.ha_registry",
    "src.api.routes.ha_zones",
    "src.api.routes.insight_schedules",
    "src.api.routes.insights",
    "src.api.routes.model_ratings",
    "src.api.routes.openai_compat",
    "src.api.routes.optimization",
    "src.api.routes.passkey",
    "src.api.routes.proposals",
    "src.api.routes.system",
    "src.api.routes.usage",
    "src.api.schemas.conversations",
    "src.api.schemas.proposals",
    # CLI
    "src.cli.commands.chat",
    # DAL layer
    "src.dal.areas",
    "src.dal.automations",
    "src.dal.base",
    "src.dal.conversations",
    "src.dal.devices",
    "src.dal.entities",
    "src.dal.flow_grades",
    "src.dal.llm_usage",
    "src.dal.queries",
    "src.dal.services",
    "src.dal.sync",
    # Diagnostics
    "src.diagnostics.entity_health",
    "src.diagnostics.error_patterns",
    "src.diagnostics.log_parser",
    # Graph layer
    "src.graph",
    "src.graph.workflows",
    "src.graph.workflows.*",
    # HA client
    "src.ha.automation_deploy",
    "src.ha.automations",
    "src.ha.base",
    "src.ha.behavioral",
    "src.ha.client",
    "src.ha.diagnostics",
    "src.ha.entities",
    "src.ha.helpers",
    "src.ha.history",
    # Core
    "src.llm",
    "src.llm_call_context",
    "src.scheduler.service",
    "src.settings",
    # Storage
    "src.storage.checkpoints",
    "src.storage.entities.automation_proposal",
    "src.storage.entities.conversation",
    "src.storage.entities.message",
    "src.storage.entities.passkey_credential",
    # Tools
    "src.tools",
    "src.tools.agent_tools",
    "src.tools.analysis_tools",
    "src.tools.approval_tools",
    "src.tools.dashboard_tools",
    "src.tools.diagnostic_tools",
    "src.tools.insight_schedule_tools",
    "src.tools.specialist_tools",
    # Tracing
    "src.tracing",
    "src.tracing.mlflow",
    "src.tracing.scorers",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
disable_error_code = [
    "type-arg",
    "attr-defined",
    "no-untyped-call",
    "override",
    "arg-type",
    "assignment",
    "return-value",
    "type-var",
    "name-defined",
    "import-untyped",
    "index",
    "misc",
    "comparison-overlap",
    "call-overload",
    "union-attr",
    "operator",
    "var-annotated",
    "typeddict-unknown-key",
    "typeddict-item",
    "abstract",
]

# =============================================================================
# PYTEST CONFIGURATION (Constitution: Reliability & Quality)
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                      # Show extra test summary
    "-q",                       # Quiet mode
    "--strict-markers",         # Strict marker enforcement
    "--strict-config",          # Strict config enforcement
    "--durations=20",           # Show 20 slowest tests for optimization
]
asyncio_mode = "auto"
# Global per-test timeout: prevents any single test from hanging the suite.
# Unit tests should complete in well under 10s; integration tests can override
# via @pytest.mark.timeout(60).  See Constitution Principle V.
timeout = 10
timeout_method = "thread"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require services)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests (skip with -m 'not slow')",
    "requires_postgres: Tests requiring PostgreSQL container",
]

# =============================================================================
# COVERAGE CONFIGURATION (Constitution: 80% min, 95% critical paths)
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "src/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    # Testing (Constitution: Reliability & Quality)
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",  # Parallel test execution
    "pytest-timeout>=2.3.0,<3.0.0",  # Per-test timeout to prevent hangs
    "factory-boy>=3.3.0",
    "testcontainers>=4.8.0",  # PostgreSQL integration tests
    "httpx>=0.28.0",  # FastAPI TestClient
    "aiosqlite>=0.22.1",  # Async SQLite for testing

    # Linting & Formatting (Constitution: Quality Gates)
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",

    # Security scanning (used by CI)
    "bandit>=1.7.0,<2.0.0",

    # Type stubs
    "types-python-dateutil>=2.9.0",
    "types-PyYAML>=6.0.0",
    "sqlalchemy[mypy]>=2.0.0",
]
